Find private accomodation that suits you section added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="styles/others.css" />
     <link rel="stylesheet" href="styles/accomodation-section.css" />
     <link rel="stylesheet" href="styles/trips-section.css" />
+    <link rel="stylesheet" href="styles/private.css" />
+    <link rel="stylesheet" href="styles/advertise-section.css" />
   </head>
   <body>
     <header>
@@ -571,8 +573,37 @@
 
     <section class="between-trips">
       <div class="two">
-        <div class="between-div"></div>
-        <div class="between-div"></div>
+        <div class="between-div">
+          <div
+            style="
+              background: url('images/between2.jpeg');
+              background-size: cover;
+            "
+            class="between-image"
+          ></div>
+          <div>
+            <p style="font-weight: normal; margin-bottom: 0">
+              1 WEEK HOLIDAY, SAVE MORE
+            </p>
+            <p style="margin-top: 7px">
+              Summer last minute: Save on accomodation with weekly discounts
+            </p>
+          </div>
+        </div>
+        <div class="between-div">
+          <div
+            style="background: url('images/hero3.jpeg'); background-size: cover"
+            class="between-image"
+          ></div>
+          <div>
+            <p style="font-weight: normal; margin-bottom: 0">
+              1 WEEK HOLIDAY, SAVE MORE
+            </p>
+            <p style="margin-top: 7px">
+              Summer last minute: Save on accomodation with weekly discounts
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -960,6 +991,101 @@
           </div>
         </a>
       </div>
+    </section>
+
+    <section class="private-section">
+      <div class="private-container">
+        <div class="private-description">
+          <h1 style="font-size: 30px; margin-bottom: 10px">
+            Find private accommodation that suits you
+          </h1>
+          <p style="font-size: 15px; font-weight: normal; margin-top: 0">
+            Want to bring everyone from grandma to baby? Even your furry
+            friends? Discover vacation rentals that meet your needs.
+          </p>
+        </div>
+        <div class="privates">
+          <a
+            href=""
+            style="
+              background: url('images/private2.jpeg');
+              background-size: cover;
+            "
+            class="private"
+          >
+            <p>HEY MEN</p>
+          </a>
+
+          <a
+            href=""
+            style="
+              background: url('images/private2.jpeg');
+              background-size: cover;
+            "
+            class="private"
+          >
+            <p>HEY MEN</p>
+          </a>
+
+          <a
+            href=""
+            style="
+              background: url('images/private2.jpeg');
+              background-size: cover;
+            "
+            class="private"
+          >
+            <p>HEY MEN</p>
+          </a>
+
+          <a
+            href=""
+            style="
+              background: url('images/private2.jpeg');
+              background-size: cover;
+            "
+            class="private"
+          >
+            <p>HEY MEN</p>
+          </a>
+
+          <a
+            href=""
+            style="
+              background: url('images/private2.jpeg');
+              background-size: cover;
+            "
+            class="private"
+          >
+            <p>HEY MEN</p>
+          </a>
+
+          <a
+            href=""
+            style="
+              background: url('images/private2.jpeg');
+              background-size: cover;
+            "
+            class="private"
+          >
+            <p>HEY MEN</p>
+          </a>
+
+          <a
+            href=""
+            style="
+              background: url('images/private2.jpeg');
+              background-size: cover;
+            "
+            class="private"
+          >
+            <p>HEY MEN</p>
+          </a>
+        </div>
+      </div>
+    </section>
+    <section class="advertise-section">
+      <div></div>
     </section>
   </body>
 </html>
