Added footer section

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <link rel="stylesheet" href="styles/trips-section.css" />
     <link rel="stylesheet" href="styles/private.css" />
     <link rel="stylesheet" href="styles/advertise-section.css" />
+    <link rel="stylesheet" href="styles/info-section.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
   </head>
   <body>
     <header>
       <a class="logo" href="">
         <img src="images/logo.svg" alt="" />
-        <sup></sup>
       </a>
 
       <ul class="tabs">
@@ -1085,7 +1086,129 @@
       </div>
     </section>
     <section class="advertise-section">
-      <div></div>
+      <div class="advertise-content">
+        <h1>Rent your accommodation with confidence with FeWo-direkt</h1>
+        <p>
+          Real-time support, quick and easy registration, and guests with
+          positive feedback – with FeWo-direkt, hosting feels like a vacation.
+        </p>
+        <a href="">Advertise accomodation</a>
+      </div>
     </section>
+    <section class="info-section">
+      <h1>What is FeWo-direkt?</h1>
+      <p>
+        FeWo-direkt is your competent partner for vacations in a
+        <a href="">vacation home</a> or <a href="">apartment</a> . As part of
+        Vrbo, one of the leading online marketplaces for vacation rentals,
+        FeWo-direkt offers you more than two million unique accommodations,
+        including fincas, bungalows, apartments, <a href="">cabins</a> , and
+        even <a href="">villas</a>
+        . Secure payments, 24/7 support, and the Book with Confidence Guarantee
+        make booking a breeze. The user-friendly website and numerous practical
+        filters allow you to effortlessly find your dream vacation rental within
+        your budget. This way, you're sure to have an unforgettable vacation
+        that's completely stress-free, from the search and booking to your stay
+        and departure.
+      </p>
+      <h1>
+        Renting a holiday apartment or holiday home: These are the advantages
+      </h1>
+      <p>
+        Families and groups in particular appreciate the advantages of vacation
+        rentals: more space, more privacy, more amenities. You have more
+        flexibility and freedom in your own four walls than in conventional
+        hotels and can plan your vacation freely - regardless of whether you
+        want to go on a city break or unwind with your <a href="">dog</a> amidst
+        picturesque nature. Are you looking for a cozy vacation cabin in the
+        mountains with a washing machine and <a href="">whirlpool</a> ? A
+        <a href="">beach house</a> on the water or a large finca in the south
+        with <a href="">a pool</a> and fully equipped kitchen? No problem,
+        because vacation rentals are available in all sizes and with every
+        desired feature you could want for your next
+        <a href="">family vacation</a> , adventure trip with friends, or
+        romantic weekend.
+      </p>
+
+      <h1>More holiday ideas</h1>
+      <ul class="ideas">
+        <li>
+          <p>Top travel destinations</p>
+          <i
+            style="color: black"
+            class="fa fa-chevron-down"
+            aria-hidden="true"
+          ></i>
+        </li>
+        <li>
+          <p>Unique accommodations</p>
+          <img src="images/down-arrow.png" alt="" />
+        </li>
+        <li>
+          <p>Trendy travel destinations</p>
+          <span><i class="fa-solid fa-chevron-down"></i></span>
+        </li>
+        <li>
+          <p>Top villa destinations</p>
+          <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        </li>
+        <li>
+          <p>Destinations for holiday apartments</p>
+          <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        </li>
+        <li>
+          <p>Travel tips & inspiration</p>
+          <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        </li>
+        <li>
+          <p>Travel tips & inspiration</p>
+          <span></span>
+        </li>
+      </ul>
+    </section>
+
+    <section class="footer">
+      <a class="footer-logo" href="">
+        <img src="images/logo.svg" alt="" />
+      </a>
+      <div class="footer-links">
+        <ul>
+          <li>Explore FeWo-direkt</li>
+          <li><a href="">Advertise accommodation</a></li>
+          <li><a href="">Book with confidence</a></li>
+          <li><a href="">Trust and security</a></li>
+          <li><a href="">Resources for partners</a></li>
+          <li><a href="">Holiday homes and holiday inspiration</a></li>
+        </ul>
+        <ul>
+          <li>Pursue</li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">career</a></li>
+          <li><a href="">Affiliate Partner</a></li>
+          <li><a href="">press</a></li>
+          <li><a href="">General terms and conditions of business</a></li>
+          <li><a href="">Privacy Policy</a></li>
+          <li><a href="">Cookie Statement</a></li>
+          <li><a href="">Reporting illegal content</a></li>
+          <li><a href="">Legal Notice/Contact</a></li>
+          <li><a href="">Responsible owner</a></li>
+          <li><a href="">Content policies and reporting content</a></li>
+        </ul>
+        <ul>
+          <li>The Vrbo family</li>
+          <li><a href="">Vrbo</a></li>
+          <li><a href="">Abritel.fr</a></li>
+          <li><a href="">FeWo-direkt.de</a></li>
+          <li><a href="">Bookabach.co.nz</a></li>
+          <li><a href="">Stayz.com.au</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <p class="copyright">
+      © 2025 HomeAway, an Expedia Group company. All rights reserved. HomeAway
+      and the HomeAway logo are trademarks or registered trademarks of
+      HomeAway.com, Inc.
+    </p>
   </body>
 </html>
