--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Cloned page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/x-icon" href="images/webicon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
@@ -1142,7 +1143,7 @@
         </li>
         <li>
           <p>Unique accommodations</p>
-          <img src="images/down-arrow.png" alt="" />
+          <i class="fa-solid fa-chevron-down"></i>
         </li>
         <li>
           <p>Trendy travel destinations</p>
@@ -1162,7 +1163,7 @@
         </li>
         <li>
           <p>Travel tips & inspiration</p>
-          <span></span>
+          <i class="fa-solid fa-chevron-down"></i>
         </li>
       </ul>
     </section>
@@ -1210,5 +1211,10 @@
       and the HomeAway logo are trademarks or registered trademarks of
       HomeAway.com, Inc.
     </p>
+
+    <script
+      src="https://kit.fontawesome.com/647325a467.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
